# mulewatch

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  compose.e2e.yaml  compose.hardening.yml  compose.smoke.yaml  compose.yaml  conftest.py  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  grype-scan.yml  images.yml  pr.yml  release.yml  validate.yml
bricks/: compose.core.yaml
config/: crawler.yaml  local.example.yaml
config/crawler/: crawler.yaml  observer.example.yaml
deploy/: .env.example  base.compose.yml  compose.base.yaml  compose.yaml  direct.compose.yml  gluetun.compose.yml
deploy/config/: prometheus.yml  verifier.yaml
deploy/e2e/: portforward_stub.py
deploy/examples/: gluetun.yaml  sans-vpn-highid.yaml  sans-vpn-lowid.yaml
deploy/smoke/: crawler.yaml  local.full.yaml  local.observer.yaml  matcher.yaml  targets.yaml
docs/: HANDOFF.md  README.md  architecture.md  legal-and-privacy.md  runbook-administration.md  runbook-deployment.md  runbook-troubleshooting.md  testing-guide.md
docs/handoffs/: 2026-06-10 - handoff - knowledge brief.md  2026-06-11 - handoff - adapter EC complet.md  2026-06-11 - handoff - moteur de matching complet.md  2026-06-12 - handoff - modèle de données complet.md  2026-06-13 - handoff - orchestration complète.md  2026-06-14 - handoff - analysis (real verifier).md  2026-06-14 - handoff - verification pipeline.md  2026-06-15 - handoff - observabilite E1 socle.md  2026-06-15 - handoff - observabilite E2 crawler.md  2026-06-15 - handoff - post-E checkpoint (backlog).md  2026-06-16 - handoff - post-E backlog pass (merge, clamav, seccomp, port-sync, e2e) COMPLET.md  2026-06-17 - handoff - complétion shared-files + fix port-sync.md  2026-06-20 - handoff - exemples de déploiement composables.md  2026-06-25 - handoff - audit lot 2 + contestés + drifts.md  2026-06-28 - handoff - réorg sémantique du repo.md  2026-06-29 - handoff - compatibilité docker desktop + retrait gVisor.md  2026-06-29 - handoff - simplification déploiement.md  2026-06-29-handoff-amelioration-config-matching.md  2026-07-01 - handoff - simplification recherche + anti-match.md  2026-07-01 - handoff - targets keroro double numerotation.md  2026-07-02 - handoff - catalog media gate (video ou archive).md  2026-07-02 - handoff - port-sync high-id reconnexion EC.md  2026-07-02 - handoff - webui files matched-only default.md  2026-07-03 - handoff - CI reusable parallel workflows.md  2026-07-03 - handoff - drop google-re2 + alpine 3.14 migration.md  2026-07-04 - handoff - CI poe gate + group by arch.md  2026-07-04 - handoff - catalog re-evaluation (startup backfill + retraction + notify).md  2026-07-04 - handoff - matcher GB veto + webui header tooltips + no-em-dash rule.md  2026-07-04 - handoff - matcher precision + target_id + files-page.md  2026-07-05 - handoff - mulewatch rename + onboarding docs.md  2026-07-06 - handoff - multi-target-matching.md  2026-07-06 - handoff - webui-crawler monolith consolidation.md  2026-07-07 - handoff - supply-chain attestation and VEX.md  2026-07-07 - handoff - webui fixed bind 0.0.0.0-8080.md  (+12 more)
docs/plans/: 2026-06-28-ci-pipeline.md  (+31 more)
examples/: gluetun.yaml
scripts/: setup-dev.sh
security/: crawler.vex.openvex.json  verifier.vex.openvex.json
(+148 files in other folders)
