[project]
name = "emule-indexer"
version = "0.0.0"
description = "Surveillance eMule pour retrouver le lost media Keroro VF"
requires-python = ">=3.12"
dependencies = [
    "google-re2>=1.1.20251105",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.10",
  "ruff>=0.5",
  "types-pyyaml>=6.0.12.20260518",
  "pytest-asyncio>=1.2",
  "testcontainers>=4.10",
  "sqlfluff>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emule_indexer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "re2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = '--cov=emule_indexer --cov-report=term-missing --cov-fail-under=100 --strict-markers -m "not ec_integration and not orchestration_integration and not download_integration"'
testpaths = ["tests"]
markers = [
    "ec_integration: tests d'intégration contre un amuled réel (Docker requis) — déselectionnés par défaut ; run dédié : uv run pytest -m ec_integration --no-cov",
    "orchestration_integration: boucle de crawl réelle contre un amuled testcontainers (Docker requis) — déselectionnés par défaut ; run dédié : uv run pytest -m orchestration_integration --no-cov",
    "download_integration: add_link + lecture de la file de download contre un amuled réel (Docker requis) — déselectionnés par défaut ; run dédié : uv run pytest -m download_integration --no-cov",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["emule_indexer"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = ["if TYPE_CHECKING:"]

[tool.sqlfluff.core]
dialect = "sqlite"
max_line_length = 100

[tool.sqlfluff.rules.references.keywords]
ignore_words = "key,value"
